# python_gpu_kcf

./: CMakeLists.txt  README.md  swig_tips.docx
src/: kcf_test.py  kcftracker.cpp  kcftracker.hpp  kcftracker.i  kcftracker.py  kcftracker_wrap.cxx  main.cpp  mat.py  my_rect.hpp  my_rect.i  my_rect.py  rectangle.py
